# piserial

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  debug.mak  gcc_Debug.h  md5.c  piSerialNum-Debug.vgdbsettings  piSerialNum-Release.vgdbsettings  piSerialNum.c  piSerialNum.vcxproj  piSerialNum.vcxproj.filters  piserial_1.4.6.orig.tar.gz.delta  piserial_1.4.6.orig.tar.gz.id  piserial_1.4.7.orig.tar.gz.delta  piserial_1.7.0.orig.tar.gz.delta  piserial_1.7.0.orig.tar.gz.id  piserial_1.7.1.orig.tar.gz.delta  piserial_1.7.1.orig.tar.gz.id  piserial_2.0.0.orig.tar.gz.delta  piserial_2.0.0.orig.tar.gz.id  piserial_2.0.0~alpha2.orig.tar.gz.delta  piserial_2.0.0~alpha2.orig.tar.gz.id  piserial_2.0.1.orig.tar.gz.delta  piserial_2.0.1.orig.tar.gz.id  piserial_2.0.2.orig.tar.gz.delta  piserial_2.0.2.orig.tar.gz.id  piserial_2.1.0.orig.tar.gz.delta  piserial_2.1.0.orig.tar.gz.id  piserial_2.1.1.orig.tar.gz.delta  piserial_2.1.1.orig.tar.gz.id  piserial_3.0.0.orig.tar.gz.delta  piserial_3.0.0.orig.tar.gz.id  piserial_3.0.1.orig.tar.gz.delta  piserial_3.0.1.orig.tar.gz.id  piserial_3.1.0.orig.tar.gz.delta  piserial_3.1.0.orig.tar.gz.id  project.h  read_ek.c  read_sernum.c  (+2 more)
debian/: changelog  control  copyright  gbp.conf  install  piserial.install  piserial.manpages  revpi-factory-reset  revpi-factory-reset.8  revpi-factory-reset.sh  rules
docs/: CMakeLists.txt  ks8851-set-mac.8  piSerial.1  piSerial.8  piSerial.8.license  piSerial.8.scd  piSerial.8.scd.license  revpi-factory-reset.8
etc/: CMakeLists.txt
etc/modules-load.d/: piserial.conf
src/: CMakeLists.txt  atecc508a.c  atecc508a.h  debug.h  ks8851-set-mac  lan9514.hex  lan95xx-set-mac  md5.c  piSerial  piSerialNum.c  read_ek.c  read_sernum.c  revpi-factory-reset  revpi-factory-reset.sh  revpi-functions  revpi-serial.c  tpm2.c  tpm2.h  version.h.in
systemd/: CMakeLists.txt  hdmi-disable.service
